Update thank you page logo, enhance font sizes in various components, and adjust section margins for improved layout

--- a/public/thankyou.html
+++ b/public/thankyou.html
@@ -90,7 +90,7 @@
         <!-- Planet Education Logo SVG -->
         <img
           class="w-[250px] mb-8 top-0 left-0"
-          src="./images/logo-new.png"
+          src="./images/Planet-2.png"
           alt="Planet Education Logo"
         />
       </div>
